aws-eire/poc-files/docker-stuff/msfm/msfm-service-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: msfm-port-1
spec:
  type: NodePort
  ports:
    - name: port1
      port: 58170
    - name: port2
      port: 58151
  selector:
    app: msfm
