aws-eire/poc-files/docker-stuff/msfm/msfm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: msfm-ingress-1
spec:
  backend:
    serviceName: msfm-port-1
    servicePort: 58170
